[gd_scene load_steps=22 format=3 uid="uid://cj0xxw8ewgpqy"]

[ext_resource type="Material" uid="uid://ctd55tbm5xssh" path="res://asset/Shader/Sky/night.tres" id="1_d3o6j"]
[ext_resource type="PackedScene" uid="uid://dr5mh3wmxd7uu" path="res://scenes/Base.tscn" id="1_jy02f"]
[ext_resource type="Script" uid="uid://bpdh0cu6naavy" path="res://scripts/Tower/inputtower.gd" id="2_5dxk1"]
[ext_resource type="Script" uid="uid://dgxccv80klhc7" path="res://scripts/Tower/TowerCon.gd" id="3_kjd3d"]
[ext_resource type="Script" uid="uid://g85gwfmcln8s" path="res://scripts/Tower/Tower_Res.gd" id="3_l0eo6"]
[ext_resource type="Resource" uid="uid://bk8grfmo48v2h" path="res://resources/res_tower/kaelio.tres" id="4_d3o6j"]
[ext_resource type="PackedScene" uid="uid://dfql5k5psmgxn" path="res://scenes/Tower/TowerSpot.tscn" id="4_qdeet"]
[ext_resource type="Resource" uid="uid://dvfphesh2a4nj" path="res://resources/res_tower/lilitia.tres" id="5_pdl2l"]
[ext_resource type="Resource" uid="uid://buqk2061a1dx5" path="res://resources/res_tower/morriden.tres" id="6_2t17w"]
[ext_resource type="PackedScene" uid="uid://cjhp6v8qnx4qm" path="res://scenes/Tower/Tower.tscn" id="6_xw3ee"]
[ext_resource type="Resource" uid="uid://bhwlp2kr8e0ir" path="res://resources/res_tower/silvanna.tres" id="7_bm28l"]
[ext_resource type="Script" uid="uid://4ipxb665lopb" path="res://scripts/WaveManager.gd" id="7_l0eo6"]
[ext_resource type="Script" path="res://resources/WaveConfig.gd" id="8_jy02f"]
[ext_resource type="Resource" uid="uid://dgw4ukvn22bjs" path="res://resources/WaveData/Level 1/Wave1_lvl1.tres" id="9_5dxk1"]
[ext_resource type="Script" uid="uid://bbexpquh4b3ip" path="res://scripts/UI/UI.gd" id="9_pdl2l"]
[ext_resource type="Script" path="res://scripts/LevelInit.gd" id="11_kjd3d"]

[sub_resource type="Sky" id="Sky_main"]
sky_material = ExtResource("1_d3o6j")

[sub_resource type="Environment" id="Environment_main"]
background_mode = 2
sky = SubResource("Sky_main")
tonemap_mode = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_ground"]
size = Vector2(50, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ground"]
albedo_color = Color(0.4, 0.6, 0.4, 1)

[sub_resource type="Curve3D" id="Curve3D_path"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -20, 0, 0, 0, 0, 0, 0, 0, 0, -20, 0, 10, 0, 0, 0, 0, 0, 0, 0, 0, 10, 0, 0, 0, 0, 0, 0, 20, 0, 10, 0, 0, 0, 0, 0, 0, 20, 0, 0),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Level1" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_main")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)
current = true
fov = 60.0

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_ground")
surface_material_override/0 = SubResource("StandardMaterial3D_ground")

[node name="Base" parent="." instance=ExtResource("1_jy02f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)
max_hp = 10

[node name="Input" type="Node" parent="." groups=["towerinput"]]
script = ExtResource("2_5dxk1")
tower_list = Array[ExtResource("3_l0eo6")]([ExtResource("4_d3o6j"), ExtResource("5_pdl2l"), ExtResource("6_2t17w"), ExtResource("7_bm28l")])

[node name="TxtPanel" type="Panel" parent="Input"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.5
offset_right = 119.5
offset_bottom = 98.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Input/TxtPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="TowerCon" type="Node" parent="." groups=["towercon"]]
script = ExtResource("3_kjd3d")

[node name="TowerSpot1" parent="TowerCon" instance=ExtResource("4_qdeet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 5)
tower_scene = ExtResource("6_xw3ee")

[node name="TowerSpot2" parent="TowerCon" instance=ExtResource("4_qdeet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 5)
tower_scene = ExtResource("6_xw3ee")

[node name="TowerSpot3" parent="TowerCon" instance=ExtResource("4_qdeet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 5)
tower_scene = ExtResource("6_xw3ee")

[node name="TowerSpot4" parent="TowerCon" instance=ExtResource("4_qdeet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 5)
tower_scene = ExtResource("6_xw3ee")

[node name="TowerSpot5" parent="TowerCon" instance=ExtResource("4_qdeet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -5)
tower_scene = ExtResource("6_xw3ee")

[node name="TowerSpot6" parent="TowerCon" instance=ExtResource("4_qdeet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -0.06654358)
tower_scene = ExtResource("6_xw3ee")

[node name="TowerSpot7" parent="TowerCon" instance=ExtResource("4_qdeet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.0607023, 0, 0.23757458)
tower_scene = ExtResource("6_xw3ee")

[node name="TowerSpot8" parent="TowerCon" instance=ExtResource("4_qdeet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.1484995, 0, 0.3281331)
tower_scene = ExtResource("6_xw3ee")

[node name="TowerSpot9" parent="TowerCon" instance=ExtResource("4_qdeet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.882721, 0, -0.13978481)
tower_scene = ExtResource("6_xw3ee")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("9_pdl2l")

[node name="Panel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 110.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HPLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Base HP: 20"

[node name="CurrencyLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Currency: 100"

[node name="WaveLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Wave: 0"

[node name="Label" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("7_l0eo6")
wave_configs = Array[ExtResource("8_jy02f")]([ExtResource("9_5dxk1")])
metadata/_custom_type_script = "uid://4ipxb665lopb"

[node name="EnemyPath" type="Path3D" parent="WaveManager"]
curve = SubResource("Curve3D_path")

[node name="LevelInit" type="Node" parent="."]
script = ExtResource("11_kjd3d")
